--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-crossfade-image": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-transition-group": "1.x",
