--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "onoff": "^6.0.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-crossfade-image": "^1.2.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "react-transition-group": "1.x",
+    "react-scripts": "^4.0.0",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
